option java_package = "proto.response";

option optimize_for = CODE_SIZE;

import "res_clan.proto";
import "res_listbase.proto";

message UserTCPLoginResponse {
  optional string sid = 1;
  optional uint32 uid = 2;
}

message UserTCPLogoutResponse{
}

message UserTCPDropResponse{
}



message UserModel{
  required uint32 id = 1;
  optional string name = 2;
  optional string subname = 3;
  optional string status = 4;  
  optional string email = 5;
  optional string college = 10;
  optional string portrait = 9;
  optional ClanGetResponse clan = 11;
  optional bool isInParty = 12;
  optional bool isInRivalList = 13; //deprecated
  optional bool isInGroupingList = 14;  //deprecated
  optional bool isInArena = 15;
  optional uint32 campusArenaID  = 17;
  optional string campusArenaName  = 18; //deprecated
  optional string campusArenaEventName  = 19; //deprecated
  optional string status_ex = 20;
  
  optional int32 age = 23;
  optional string gender = 24;
  optional string jianghudiwei = 25;
  optional string truename = 26;
  optional string birthday = 27;
  optional string city = 28;
  optional string department = 29;   
  optional string im_qq = 41;
  optional string mobile = 42; // wrong naming style
  optional string flash_storage = 43;
  optional string im_msn = 44; // wrong naming style
  optional string yearjoined = 46; 
  optional string dormintory = 47;
  optional string mouse=48;
  optional string keyboard = 49;

  optional int32 gold = 50;
  optional int32 activity = 51;
  optional int32 power = 52;
  
  //TODO: Clan
  //TODO: Team
  //TODO: Arena List
  
  //Internet-Cafe Version
//  optional uint32 inetcafe_exp = 30;
//  optional int32 inetcafe_level = 31;
//  optional uint32 inetcafe_cab = 32;
//  optional string inetcafe_R5 = 33; // ×î½ü5³¡ÊäÓ®¡£
//  optional uint32 inetcafe_win = 34;
//  optional uint32 inetcafe_loss = 35;
//  optional uint32 inetcafe_total = 36;
//  optional float inetcafe_rate = 37;
//  optional uint32 inetcafe_tolevelup = 38;
//  optional uint32 inetcafe_rank = 39;
//  optional string inetcafe_pubwin_id = 45;
//  
//  optional uint32 inetcafe_exp_sc = 50;
//  optional int32 inetcafe_level_sc = 51;
//  optional uint32 inetcafe_cab_sc = 52;
//  optional string inetcafe_R5_sc = 53; 
//  optional uint32 inetcafe_win_sc = 54;
//  optional uint32 inetcafe_loss_sc = 55;
//  optional uint32 inetcafe_total_sc = 56;
//  optional float inetcafe_rate_sc = 57;
//  optional uint32 inetcafe_tolevelup_sc = 58;
//  optional uint32 inetcafe_rank_sc = 59;
//  
//  optional uint32 inetcafe_exp_war3 = 70;
//  optional int32 inetcafe_level_war3 = 71;
//  optional uint32 inetcafe_cab_war3 = 72;
//  optional string inetcafe_R5_war3 = 73; 
//  optional uint32 inetcafe_win_war3 = 74;
//  optional uint32 inetcafe_loss_war3 = 75;
//  optional uint32 inetcafe_total_war3 = 76;
//  optional float inetcafe_rate_war3 = 77;
//  optional uint32 inetcafe_tolevelup_war3 = 78;
//  optional uint32 inetcafe_rank_war3 = 79;

optional int32 ca03_dota_score = 81;
optional uint32 ca03_dota_level = 82;
optional int32 ca03_dota_next_level_score=83;
optional int32 ca03_dota_this_level_score=84;
optional int32 ca03_dota_daily_match = 85;
optional int32 ca03_dota_total = 86;
optional int32 ca03_dota_early_quit = 87;
optional int32 ca03_dota_win = 88;

optional int32 ca03_sc_score = 91;
optional uint32 ca03_sc_level = 92;
optional int32 ca03_sc_next_level_score=93;
optional int32 ca03_sc_this_level_score=94;
optional int32 ca03_sc_daily_match = 95;
optional int32 ca03_sc_total = 96;
optional int32 ca03_sc_early_quit = 97;
optional int32 ca03_sc_win = 98;

optional int32 ca03_war3_score = 101;
optional uint32 ca03_war3_level = 102;
optional int32 ca03_war3_next_level_score=103;
optional int32 ca03_war3_this_level_score=104;
optional int32 ca03_war3_daily_match = 105;
optional int32 ca03_war3_total = 106;
optional int32 ca03_war3_early_quit = 107;
optional int32 ca03_war3_win = 108;


repeated UserGameStats gameStats = 111;
}

message UserGameStats{
  optional uint32 game_id = 1;
  optional uint32 power = 2;
  optional uint32 rank = 3;
  optional uint32 win = 4;
  optional uint32 total = 5;
}

message UserListResponse{
  repeated UserModel users = 1;
  optional ListParams params = 2;
}

message CollegeListResponse{
  repeated string colleges = 1;  
}
